2007-11-06  Dan Williams  <dcbw@redhat.com>

	* src/utils/crypto.c
	  src/utils/crypto.h
	  src/utils/crypto_nss.c
	  src/utils/crypto_gnutls.c
	  src/utils/Makefile.am
	  configure.ac
		- Add bits to handle decoding certificates and keys, and for decrypting
		private keys to send to the supplicant.  Implementations for NSS and
		gnutls are provided with NSS as the default unless selected differently
		at configure time with --with-nss=[yes|no] and --with-gnutls=[yes|no]

2007-10-31  Dan Williams  <dcbw@redhat.com>

	* src/utils/utils.c
	  src/utils/utils.h
		- (utils_get_device_description): new function; be more clever about
			constructing the device description from the product and vendor
			strings

	* src/wireless-dialog.c
		- (add_device_to_model): use add_device_to_model()

	* src/applet.c
		- (sort_devices): use add_device_to_model(), don't segfault if a
			description can't be created (rh #337191)

	* src/menu-items.c
		- (add_device_to_model): use add_device_to_model()

2007-10-27  Dan Williams  <dcbw@redhat.com>

	Patch from Dan Winship <dwinship@redhat.com>

	* gconf-helpers/gconf-helpers.c
	  gconf-helpers/gconf-helpers.h
		- (nm_gconf_get_all_connections): convert entries if needed

	* gconf-helpers/Makefile.am
	  gconf-helpers/gconf-upgrade.c
	  gconf-helpers/gconf-upgrade.h
		- Convert GConf entries from old format to new format

	* gconf-helpers/Makefile.am
	  vpn-properties/nm-vpn-properties.c
	  connection-editor/nm-connection-list.c
		- Use nm_gconf_get_all_connections() to convert old format entries to
			new format if needed

2007-10-27  Dan Williams  <dcbw@redhat.com>

	* src/Makefile.am
	  src/password-dialog.c
	  src/password-dialog.h
	  src/applet.glade
	  src/applet-dbus-settings.c
		- Remove the old password dialog code

2007-10-27  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (get_default_type_for_security): fix crash when using WPA

2007-10-27  Dan Williams  <dcbw@redhat.com>

	* src/applet.c