@@ -1,5 +1,14 @@
 2007-11-06  Dan Williams  <dcbw@redhat.com>
 
+	* src/gconf-helpers/gconf-helpers.h
+		- #define the applet private connection tags that are used for things
+			not passed to NetworkManager directly in the connection info
+
+	* src/gconf-helpers/gconf-upgrade.c
+		- Use the new tags
+
+2007-11-06  Dan Williams  <dcbw@redhat.com>
+
 	* src/utils/crypto.c
 	  src/utils/crypto.h
 	  src/utils/crypto_nss.c
